# sand-track

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yaml  entrypoint.sh  fly.toml  pyproject.toml  secret_key.txt  task-qr-content.json  wsgi.py
.github/workflows/: fly.yaml  version.yaml
examples/: sand-city-example-1.igc
src/: __init__.py  auth.py  config.py  main.py  setup.py  tasks.py
src/admin/: AuthenticatedModelView.py  TaskModelView.py  UserModelView.py  WaypointGroupModelView.py
src/migrations/versions/: 03b287ed21da_user_is_admin.py  044611c24762_initial.py  13392f1ceaca_initial.py  4f95f69a8fc5_initial.py  7b637db5c5e5_init.py  7dad2ea81faf_user_password.py  8d0ed10e1f07_initial.py  ab52761e4d74_initial.py  b032029bca8c_initial.py  c7f86eb44c29_add_task_submissions_closed.py  c9aab70d07b2_initial.py
src/models/: entry.py  task.py  turnpoint.py  user.py  waypoint.py  waypoint_group.py
src/services/polyline/: __init__.py  polyline.py
src/services/task/: __init__.py  task.py
src/static/css/: style.css
src/static/downloads/: Vaca_waypoints_04152024.wpt  sand-city-v1.wpt  xc-league-2024.wpt
src/templates/: base.html  index.html  login.html  signup.html  task.task
src/templates/tasks/: detail.html  index.html
test/: test_tasks.py
