[project]
name = "sand-track"
version = "0.1.8"
description = "A simple paragliding task site"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bootstrap-flask>=2.4.2",
    "dotenv>=0.9.9",
    "faker>=37.1.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "geopy>=2.4.1",
    "gunicorn>=23.0.0",
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
    "tzlocal>=5.3.1",
]
